--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -1778,7 +1778,7 @@ body.contrast-high {
         color: white !important;
       }
       span.status, .tags li, {
-        color: black !important;
+        color: white !important;
       }
     }
   }
